# Course-work---4-UPIT

./: .gitignore  README.md  main.py  pyproject.toml
src/: Abstraction.py  HH_Api.py  utils.py  work_with_vacancies.py  working_with_json_file.py
