[tool.poetry]
name = "course-work-4-upit"
version = "0.1.0"
description = ""
authors = ["Aleksandr <zemacohoznik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
accessify = "^0.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
